Added methods